Añadido todo lo necesario para los test, y algunos ejemplos